reconnected all the auth pages and font-Icons are working again

--- a/blog/templates/blog/blog_categories.html
+++ b/blog/templates/blog/blog_categories.html
@@ -71,11 +71,11 @@
                                 <span>
                                     <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-warning"
                                         href="{% url 'blog:list' %}">Back to
-                                        Blogs<i class="pl-3 fad fa-undo"></i></a>
+                                        Blogs<i class="pl-3 fa fa-undo"></i></a>
                                 </span>
                                 <span>
                                     <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-success"
-                                        href="{% url 'home' %}"><i class="pr-3 fad fa-home"></i>Home</a>
+                                        href="{% url 'home' %}"><i class="pr-3 fa fa-home"></i>Home</a>
                                 </span>
 
                             </div>
@@ -229,11 +229,11 @@
                     <span>
                         <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-warning"
                             href="{% url 'blog:list' %}">Back to
-                            Blogs<i class="pl-3 fad fa-undo"></i></a>
+                            Blogs<i class="pl-3 fa fa-undo"></i></a>
                     </span>
                     <span>
                         <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-success" href="{% url 'home' %}"><i
-                                class="pr-3 fad fa-home"></i>Home</a>
+                                class="pr-3 fa fa-home"></i>Home</a>
                     </span>
 
                 </div>
