--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -48,18 +48,18 @@
                                 <p class="text-center text-wht"> <small class="text-wht">Author: </small>
                                     &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
-                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
+                                        class="mx-2 text-wht fa fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
                                 <div class="row w-100 justify-content-around">
-                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fa fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-primary fad fa-thumbs-up"></i>
+                                                class="text-primary fa fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-ylw fad fa-comments-alt"></i>
+                                                class="text-ylw fa fa-comments-o"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
 
@@ -89,18 +89,18 @@
                                 <p class="text-center text-wht"> <small class="text-wht">Author: </small>
                                     &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
-                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
+                                        class="mx-2 text-wht fa fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
                                 <div class="row w-100 justify-content-around">
-                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fa fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-primary fad fa-thumbs-up"></i>
+                                                class="text-primary fa fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-ylw fad fa-comments-alt"></i>
+                                                class="text-ylw fa fa-comments-o"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
 
@@ -127,18 +127,18 @@
                                 <p class="text-center text-wht"> <small class="text-wht">Author: </small>
                                     &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
-                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
+                                        class="mx-2 text-wht fa fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
                                     class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
                                 <div class="row w-100 justify-content-around">
-                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fa fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-primary fad fa-thumbs-up"></i>
+                                                class="text-primary fa fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
                                     <div class="text-center text-wht col-2"><span><i
-                                                class="text-ylw fad fa-comments-alt"></i>
+                                                class="text-ylw fa fa-comments-o"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
                             </div>
