--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -112,14 +112,21 @@
     <div class="text-center d-block d-md-none">
         <img src="{% static 'images/logo.png' %}" alt="">
     </div>
-
-    <div class="row">
-        <div class="col-12 feet-bg">
-            <a class="feet-bg" href="https://github.com/Clinton-Davis" target="_blank">
-
-                <h6 class="aw text-center my-3"><img class=""
-                        src="https://img.icons8.com/fluent/28/000000/github.png" />Web
-                    Design by Clinton Davis</h6>
+<hr class="hr-wht"/>
+    <div class="row  mx-auto">
+        <div class="col-12 d-flex justify-content-center">
+            <a class="clint_link" href="https://www.digital-web.solutions/" target="_blank" rel="noopener noreferrer"
+                aria-label="link to developers web page 'Digital-web solutions'">
+                <img
+                    src="{% static 'images/Groupw.svg' %}"
+                    alt="Digital-Web Soluction Logo"
+                    class="logos" 
+                />
+                <img
+                class="spinning logos"
+                src="{% static 'images/color-Icon.svg' %}"
+                alt="Digital-Web Soluction spinning Logo"
+                />
             </a>
         </div>
     </div>
