--- a/blog/templates/blog/blog_authors.html
+++ b/blog/templates/blog/blog_authors.html
@@ -35,16 +35,16 @@
                             {% elif blog.category  == 'Endurance' %} text-info
                             {% elif blog.category  == 'Covid-19' %} text-danger 
                             {% elif blog.category  == 'Members' %} text-light 
-                            {% else %} text-success {% endif %}"><i class=" pl-2 pr-1 fad fa-tags"></i>
+                            {% else %} text-success {% endif %}"><i class=" pl-2 pr-1 fa fa-tags"></i>
                                 {{ blog.category }}</span></div>
                     </a>
                     <div class="col-12"><small class="text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                     </div>
-                    <div class="col-12"><span class="text-center"><i class="px-2 text-grn fad fa-eye"></i>
+                    <div class="col-12"><span class="text-center"><i class="px-2 text-grn fa fa-eye"></i>
                             {{ blog.get_view_count }}</span>
-                        <span class="text-center"><i class="px-2 text-primary fad fa-thumbs-up"></i>
+                        <span class="text-center"><i class="px-2 text-primary fa fa-thumbs-up"></i>
                             {{ blog.get_like_count }}</span>
-                        <span class="text-center"><i class=" px-2 text-ylw fad fa-comments-alt"></i>
+                        <span class="text-center"><i class=" px-2 text-ylw fa fa-comments-o"></i>
                             {{ blog.get_comment_count }}</span>
 
                         <span class="float-right">Posted: {{ blog.publish_date|timesince }}</span></div>
