--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -238,14 +238,14 @@
                                 {% elif blog.category  == 'Covid-19' %} text-danger 
                                 {% elif blog.category  == 'Members' %} text-light 
                                 {% else %} text-success {% endif %}" href="{{ blog.get_absolute_url }}"><i
-                                        class="mx-2 fad fa-tags"></i>
+                                        class="mx-2 fa fa-tags"></i>
                                     <small>{{ blog.category }}</small>
                                 </a>
-                                <div class="text-center col-2"><span><i class="text-grn fad fa-eye"></i>
+                                <div class="text-center col-2"><span><i class="text-grn fa fa-eye"></i>
                                         {{ blog.get_view_count }}</span></div>
-                                <div class="text-center col-2"><span><i class="text-primary fad fa-thumbs-up"></i>
+                                <div class="text-center col-2"><span><i class="text-primary fa fa-thumbs-up"></i>
                                         {{ blog.get_like_count }}</span><br></div>
-                                <div class="text-center col-2"><span><i class="text-ylw fad fa-comments-alt"></i>
+                                <div class="text-center col-2"><span><i class="text-ylw fa fa-comments-o"></i>
                                         {{ blog.get_comment_count }}</span></div>
                             </div>
 
