--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -63,15 +63,15 @@
                                 <div class="text-wht mx-auto">
                                     <a href="{{ blog.get_absolute_url }}">{{ blog.title|title }}</a><br>
                                     <div class="row justify-content-center">
-                                        <div class="col-4"><small class="text-wht"><i class="text-grn fad fa-eye"></i>
+                                        <div class="col-4"><small class="text-wht"><i class="text-grn fa fa-eye"></i>
                                                 {{ blog.get_view_count }}</small>
                                         </div>
                                         <div class="col-4"><small class="text-wht"><i
-                                                    class="text-primary fad fa-thumbs-up"></i>
+                                                    class="text-primary fa fa-thumbs-up"></i>
                                                 {{ blog.get_like_count }}</small>
                                         </div>
                                         <div class="col-4"><small class="text-wht"><i
-                                                    class="text-ylw fad fa-comments-alt"></i>
+                                                    class="text-ylw fa fa-comments-o"></i>
                                                 {{ blog.get_comment_count }}</small>
                                         </div>
                                     </div>
@@ -81,7 +81,7 @@
                                             {% elif blog.category  == 'Endurance' %} text-info
                                             {% elif blog.category  == 'Covid-19' %} text-danger 
                                             {% elif blog.category  == 'Members' %} text-light 
-                                            {% else %} text-success {% endif %}""><i class=" fad fa-tags"></i>
+                                            {% else %} text-success {% endif %}""><i class=" fa fa-tags"></i>
                                                 {{ blog.category }}</small>
                                         </div>
 
