--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,600;1,400&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,600;1,400&display=swap");
 
 #container {
     background: url(/static/images/george-pagan.small.jpg) no-repeat center center fixed;
@@ -118,4 +118,4 @@ a:visited {
 
 .app-sites {
     background-color: rgb(66, 164, 250);
-}
+} */
